  Added: has_access_to_limitation now has a fourth parameter 'debug', that needs to be true to get debug
      on unmatched policy's
- Added a fourth parameter on ezjscore/call to be able to enable debug in response
- Make ezjscServerRouter use hasAccessToLimitation to support multiple policies
- Add support for spellchecker and facets support for ezfind



# v1.1.0alpha1

- Fixed bug: ie6 issue with Y.io.ez
- Updated YUI 3.0.0 to GA
- Fixed bug #15606: Admin Content Tree images not found
- Fixed bug #15699: eZJSCore: possible function mixup for ezscriptfiles template operator
- BC: Removed charset attribute from all html tags but script with src attribute (html validation)
- Deprecated charset parameter on ezcss, ezcss_load and ezcss_requried template operators!
- Only use POST parameters for ezjscore/call parameters to avoid reaching url limit and 
  logging parameters in wwwserver logs
- Add missing include_once('kernel/common/i18n.php'); in index_ajax.php
- Make sure admin user has access to /call even if PolicyOmitList/AnonymousAccessList is commented
- Add support for c.arguments on Y.io.ez() like Y.io() has
- Added support for setting ContentType with get parameter on ezjscore/call for development use
- Added ezjsc::search for re use by other extensions (same parameters as the one in ezflow and ezoe)
- Fixed ezjscore/run issue with eZ Publish 4.0.0 / 4.0.1 on eZURI::instance()
- Disabled language attribute by default on ezscript() for xhtml strict / xhtml1.1 / html5 validation
- BC: Fixed setting typo LocaleScript -> LocalScript in ezjscore.ini
- Added support for more general use of has_access_to_limitation including array values for limitations
- ezjsc::search: Added support for SearchContentClassIdentifier (requires ezp 4.1 or higher)
- ezjsc::search: Return SearchString as part of returned result for js callback use
- Bump required eZ Publish version to 4.1
- Implemented #15811: ez JS Packer option to include mofied time in file url